crates/syntax/src/snapshots/successes/syntax__tests__successes@string_call_expr.snap
---
source: crates/syntax/src/tests.rs
expression: s

---
Program@0..131
  LocalAssignStmt@0..41
    LocalKw@0..5 "local"
    Whitespace@5..6 " "
    MultiName@6..9
      Name@6..9
        Ident@6..9 "res"
    Whitespace@9..10 " "
    Eq@10..11 "="
    Whitespace@11..12 " "
    MultivalExpr@12..41
      StringCallExpr@12..41
        NameRef@12..17
          Ident@12..17 "print"
        Whitespace@17..18 " "
        Literal@18..41
          Str@18..41 "\"this is a string call\""
  Whitespace@41..42 "\n"
  LocalAssignStmt@42..86
    LocalKw@42..47 "local"
    Whitespace@47..48 " "
    MultiName@48..55
      Name@48..55
        Ident@48..55 "another"
    Whitespace@55..56 " "
    Eq@56..57 "="
    Whitespace@57..58 " "
    MultivalExpr@58..86
      StringCallExpr@58..86
        CallExpr@58..74
          StringCallExpr@58..72
            NameRef@58..64
              Ident@58..64 "higher"
            Whitespace@64..65 " "
            Literal@65..72
              Str@65..72 "\"hello\""
          Arglist@72..74
            LParen@72..73 "("
            RParen@73..74 ")"
        Literal@74..86
          Str@74..86 "\"what ithis\""
  Whitespace@86..87 "\n"
  LocalAssignStmt@87..130
    LocalKw@87..92 "local"
    Whitespace@92..93 " "
    MultiName@93..97
      Name@93..97
        Ident@93..97 "expr"
    Whitespace@97..98 " "
    Eq@98..99 "="
    Whitespace@99..100 " "
    MultivalExpr@100..130
      StringCallExpr@100..130
        ParenExpr@100..116
          LParen@100..101 "("
          FunctionExpr@101..115
            FunctionKw@101..109 "function"
            Paramlist@109..111
              LParen@109..110 "("
              RParen@110..111 ")"
            Whitespace@111..112 " "
            Body@112..112
            EndKw@112..115 "end"
          RParen@115..116 ")"
        Literal@116..130
          Str@116..130 "\"hello person\""
  Whitespace@130..131 "\n"

=============================
Errors:
=============================
[]
