crates/syntax/src/snapshots/successes/syntax__tests__successes@types.snap
---
source: crates/syntax/src/tests.rs
expression: s

---
Program@0..56
  LocalAssignStmt@0..55
    LocalKw@0..5 "local"
    Whitespace@5..6 " "
    MultiName@6..7
      Name@6..7
        Ident@6..7 "_"
    Whitespace@7..8 " "
    Eq@8..9 "="
    Whitespace@9..10 " "
    MultivalExpr@10..55
      Literal@10..15
        Str@10..15 "\"asd\""
      Comma@15..16 ","
      Whitespace@16..17 " "
      Literal@17..21
        Number@17..21 "1223"
      Comma@21..22 ","
      Whitespace@22..23 " "
      Literal@23..27
        TrueKw@23..27 "true"
      Comma@27..28 ","
      Whitespace@28..29 " "
      Literal@29..34
        FalseKw@29..34 "false"
      Comma@34..35 ","
      Whitespace@35..36 " "
      FunctionExpr@36..50
        FunctionKw@36..44 "function"
        Paramlist@44..46
          LParen@44..45 "("
          RParen@45..46 ")"
        Whitespace@46..47 " "
        Body@47..47
        EndKw@47..50 "end"
      Comma@50..51 ","
      Whitespace@51..52 " "
      Literal@52..55
        NilKw@52..55 "nil"
  Whitespace@55..56 "\n"

=============================
Errors:
=============================
[]
